// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDatePickerRange is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiDatePickerRange testClass1 testClass2 emotion-euiDatePickerRange-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFormControlLayout euiFormControlLayoutDelimited emotion-euiFormControlLayout-group-delimited"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__start euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__end euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDatePickerRange props compressed 1`] = `
<div
  class="euiDatePickerRange emotion-euiDatePickerRange"
>
  <div
    class="euiFormControlLayout euiFormControlLayoutDelimited emotion-euiFormControlLayout-compressed-group-delimited"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-compressed-static"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__start euiFormControlLayoutDelimited__input emotion-euiFieldText-compressed-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__end euiFormControlLayoutDelimited__input emotion-euiFieldText-compressed-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDatePickerRange props disabled 1`] = `
<div
  class="euiDatePickerRange emotion-euiDatePickerRange"
>
  <div
    class="euiFormControlLayout euiFormControlLayout-isDisabled euiFormControlLayoutDelimited emotion-euiFormControlLayout-group-delimited-disabled"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static-disabled"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__start euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            disabled=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__end euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            disabled=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDatePickerRange props fullWidth 1`] = `
<div
  class="euiDatePickerRange emotion-euiDatePickerRange"
>
  <div
    class="euiFormControlLayout euiFormControlLayoutDelimited emotion-euiFormControlLayout-fullWidth-group-delimited"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__start euiFormControlLayoutDelimited__input emotion-euiFieldText-fullWidth-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__end euiFormControlLayoutDelimited__input emotion-euiFieldText-fullWidth-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDatePickerRange props inline renders 1`] = `
<div
  class="euiDatePickerRange emotion-euiDatePickerRangeInline-responsive-shadow"
>
  <div
    class="euiFormControlLayout euiFormControlLayoutDelimited emotion-euiFormControlLayout-group-delimited-shadow"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited"
    >
      <div
        class="react-datepicker emotion-euiReactDatePicker"
      >
        <div
          class="react-datepicker__triangle"
        />
        <button
          aria-label="Previous Month"
          class="euiButtonIcon react-datepicker__navigation react-datepicker__navigation--previous emotion-euiButtonIcon-s-empty-text"
          title="Previous Month"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </button>
        <button
          aria-label="Next month"
          class="euiButtonIcon react-datepicker__navigation react-datepicker__navigation--next emotion-euiButtonIcon-s-empty-text"
          title="Next month"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </button>
        <div
          class="react-datepicker__month-container"
        >
          <div
            class="react-datepicker__header"
          >
            <div
              class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
            >
              <div
                class="react-datepicker__month-dropdown-container react-datepicker__month-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the month selector. January is currently selected."
                  class="react-datepicker__month-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__month-read-view--selected-month"
                  >
                    January
                  </span>
                  <span
                    class="react-datepicker__month-read-view--down-arrow"
                    color="subdued"
                    data-euiicon-type="arrowDown"
                  />
                </div>
              </div>
              <div
                class="react-datepicker__year-dropdown-container react-datepicker__year-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the year selector. 2000 is currently selected."
                  class="react-datepicker__year-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__year-read-view--selected-year"
                  >
                    2000
                  </span>
                  <span
                    class="react-datepicker__year-read-view--down-arrow"
                    color="subdued"
                    data-euiicon-type="arrowDown"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-datepicker__day-names"
            >
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Su
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Sunday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Mo
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Monday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Tu
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Tuesday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  We
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Wednesday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Th
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Thursday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Fr
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Friday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Sa
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Saturday
                </span>
              </div>
            </div>
          </div>
          <div
            aria-label="January, 2000"
            class="react-datepicker__month react-datepicker__month--accessible"
            role="listbox"
            tabindex="0"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            />
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-26"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                26
              </div>
              <div
                aria-label="day-27"
                class="react-datepicker__day react-datepicker__day--mon react-datepicker__day--outside-month"
                role="option"
              >
                27
              </div>
              <div
                aria-label="day-28"
                class="react-datepicker__day react-datepicker__day--tue react-datepicker__day--outside-month"
                role="option"
              >
                28
              </div>
              <div
                aria-label="day-29"
                class="react-datepicker__day react-datepicker__day--wed react-datepicker__day--outside-month"
                role="option"
              >
                29
              </div>
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--thu react-datepicker__day--outside-month"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-31"
                class="react-datepicker__day react-datepicker__day--fri react-datepicker__day--outside-month"
                role="option"
              >
                31
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--selected react-datepicker__day--weekend"
                role="option"
              >
                1
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                4
              </div>
              <div
                aria-label="day-5"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                5
              </div>
              <div
                aria-label="day-6"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                6
              </div>
              <div
                aria-label="day-7"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                7
              </div>
              <div
                aria-label="day-8"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                8
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-9"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                9
              </div>
              <div
                aria-label="day-10"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                10
              </div>
              <div
                aria-label="day-11"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                11
              </div>
              <div
                aria-label="day-12"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                12
              </div>
              <div
                aria-label="day-13"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                13
              </div>
              <div
                aria-label="day-14"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                14
              </div>
              <div
                aria-label="day-15"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                15
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-16"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                16
              </div>
              <div
                aria-label="day-17"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                17
              </div>
              <div
                aria-label="day-18"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                18
              </div>
              <div
                aria-label="day-19"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                19
              </div>
              <div
                aria-label="day-20"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                20
              </div>
              <div
                aria-label="day-21"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                21
              </div>
              <div
                aria-label="day-22"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                22
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-23"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                23
              </div>
              <div
                aria-label="day-24"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                24
              </div>
              <div
                aria-label="day-25"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                25
              </div>
              <div
                aria-label="day-26"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                26
              </div>
              <div
                aria-label="day-27"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                27
              </div>
              <div
                aria-label="day-28"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                28
              </div>
              <div
                aria-label="day-29"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                29
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-31"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                31
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--tue react-datepicker__day--outside-month"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--wed react-datepicker__day--outside-month"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--thu react-datepicker__day--outside-month"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--fri react-datepicker__day--outside-month"
                role="option"
              >
                4
              </div>
              <div
                aria-label="day-5"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                5
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="react-datepicker emotion-euiReactDatePicker"
      >
        <div
          class="react-datepicker__triangle"
        />
        <button
          aria-label="Previous Month"
          class="euiButtonIcon react-datepicker__navigation react-datepicker__navigation--previous emotion-euiButtonIcon-s-empty-text"
          title="Previous Month"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </button>
        <button
          aria-label="Next month"
          class="euiButtonIcon react-datepicker__navigation react-datepicker__navigation--next emotion-euiButtonIcon-s-empty-text"
          title="Next month"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </button>
        <div
          class="react-datepicker__month-container"
        >
          <div
            class="react-datepicker__header"
          >
            <div
              class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
            >
              <div
                class="react-datepicker__month-dropdown-container react-datepicker__month-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the month selector. January is currently selected."
                  class="react-datepicker__month-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__month-read-view--selected-month"
                  >
                    January
                  </span>
                  <span
                    class="react-datepicker__month-read-view--down-arrow"
                    color="subdued"
                    data-euiicon-type="arrowDown"
                  />
                </div>
              </div>
              <div
                class="react-datepicker__year-dropdown-container react-datepicker__year-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the year selector. 2000 is currently selected."
                  class="react-datepicker__year-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__year-read-view--selected-year"
                  >
                    2000
                  </span>
                  <span
                    class="react-datepicker__year-read-view--down-arrow"
                    color="subdued"
                    data-euiicon-type="arrowDown"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-datepicker__day-names"
            >
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Su
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Sunday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Mo
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Monday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Tu
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Tuesday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  We
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Wednesday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Th
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Thursday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Fr
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Friday
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  Sa
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  Saturday
                </span>
              </div>
            </div>
          </div>
          <div
            aria-label="January, 2000"
            class="react-datepicker__month react-datepicker__month--accessible"
            role="listbox"
            tabindex="0"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            />
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-26"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                26
              </div>
              <div
                aria-label="day-27"
                class="react-datepicker__day react-datepicker__day--mon react-datepicker__day--outside-month"
                role="option"
              >
                27
              </div>
              <div
                aria-label="day-28"
                class="react-datepicker__day react-datepicker__day--tue react-datepicker__day--outside-month"
                role="option"
              >
                28
              </div>
              <div
                aria-label="day-29"
                class="react-datepicker__day react-datepicker__day--wed react-datepicker__day--outside-month"
                role="option"
              >
                29
              </div>
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--thu react-datepicker__day--outside-month"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-31"
                class="react-datepicker__day react-datepicker__day--fri react-datepicker__day--outside-month"
                role="option"
              >
                31
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                1
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--selected react-datepicker__day--weekend"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                4
              </div>
              <div
                aria-label="day-5"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                5
              </div>
              <div
                aria-label="day-6"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                6
              </div>
              <div
                aria-label="day-7"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                7
              </div>
              <div
                aria-label="day-8"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                8
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-9"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                9
              </div>
              <div
                aria-label="day-10"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                10
              </div>
              <div
                aria-label="day-11"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                11
              </div>
              <div
                aria-label="day-12"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                12
              </div>
              <div
                aria-label="day-13"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                13
              </div>
              <div
                aria-label="day-14"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                14
              </div>
              <div
                aria-label="day-15"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                15
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-16"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                16
              </div>
              <div
                aria-label="day-17"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                17
              </div>
              <div
                aria-label="day-18"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                18
              </div>
              <div
                aria-label="day-19"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                19
              </div>
              <div
                aria-label="day-20"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                20
              </div>
              <div
                aria-label="day-21"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                21
              </div>
              <div
                aria-label="day-22"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                22
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-23"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                23
              </div>
              <div
                aria-label="day-24"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                24
              </div>
              <div
                aria-label="day-25"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                25
              </div>
              <div
                aria-label="day-26"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                26
              </div>
              <div
                aria-label="day-27"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                27
              </div>
              <div
                aria-label="day-28"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                28
              </div>
              <div
                aria-label="day-29"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                29
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-31"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                31
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--tue react-datepicker__day--outside-month"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--wed react-datepicker__day--outside-month"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--thu react-datepicker__day--outside-month"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--fri react-datepicker__day--outside-month"
                role="option"
              >
                4
              </div>
              <div
                aria-label="day-5"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                5
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDatePickerRange props isInvalid 1`] = `
<div
  class="euiDatePickerRange emotion-euiDatePickerRange"
>
  <div
    class="euiFormControlLayout euiFormControlLayoutDelimited euiFormControlLayoutDelimited--isInvalid emotion-euiFormControlLayout-group-delimited"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited-invalid"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-invalid="true"
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__start euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-danger-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-invalid="true"
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__end euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static"
      >
        <span
          color="danger"
          data-euiicon-type="warning"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDatePickerRange props isLoading 1`] = `
<div
  class="euiDatePickerRange emotion-euiDatePickerRange"
>
  <div
    class="euiFormControlLayout euiFormControlLayoutDelimited emotion-euiFormControlLayout-group-delimited"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__start euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__end euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static"
      >
        <span
          aria-label="Loading"
          class="euiLoadingSpinner emotion-euiLoadingSpinner-m"
          role="progressbar"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDatePickerRange props readOnly 1`] = `
<div
  class="euiDatePickerRange emotion-euiDatePickerRange"
>
  <div
    class="euiFormControlLayout euiFormControlLayout-readOnly euiFormControlLayoutDelimited emotion-euiFormControlLayout-group-delimited-readOnly"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited-readOnly"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__start euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__end euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            readonly=""
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDatePickerRange uses individual EuiDatePicker props 1`] = `
<div
  aria-label="aria-label"
  class="euiDatePickerRange testClass1 testClass2 emotion-euiDatePickerRange-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFormControlLayout euiFormControlLayoutDelimited emotion-euiFormControlLayout-group-delimited"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly-delimited"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-static"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__start hello euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="euiText euiFormControlLayoutDelimited__delimiter emotion-euiText-s-euiTextColor-subdued-euiFormControlLayoutDelimited__delimiter"
      >
        <span
          data-euiicon-type="sortRight"
        >
          to
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker euiDatePickerRange__end world euiFormControlLayoutDelimited__input emotion-euiFieldText-controlOnly-euiFormControlLayoutDelimited__input"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
